src/lexer.c
/* Generated by re2c 4.5.1 on Wed Jul  8 13:57:26 2026 */
#line 1 "src/lexer.re"
// vim: ft=c
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

#include "cum.h"
#include "lexer.h"
#include "tokens.h"

void
lexer_init(Lexer *l, const char *src)
{
        l->YYCURSOR = src;
        l->YYMARKER = src;
        l->YYLIMIT = src + strlen(src) + 1;
        l->tok = src;
        l->linestart = src;
        l->line = 1;
}

Token
lexer_next(Lexer *l)
{
#define YYCURSOR l->YYCURSOR
#define YYMARKER l->YYMARKER
#define YYLIMIT l->YYLIMIT

        Token t = { 0 };
loop:
        l->tok = YYCURSOR;
        
#line 35 "src/lexer.c"
{
	int yych;
	yych = *YYCURSOR;
	switch (yych) {
		case 0x00:
			if (YYLIMIT <= YYCURSOR) goto yy2;
			goto yy1;
		case '\t':
		case '\v':
		case '\f':
		case '\r':
		case ' ': goto yy5;
		case '\n': goto yy7;
		case '/': goto yy8;
		case 'i': goto yy9;
		default: goto yy3;
	}
yy1:
	++YYCURSOR;
yy2:
#line 46 "src/lexer.re"
	{ return t; }
#line 58 "src/lexer.c"
yy3:
	++YYCURSOR;
yy4:
#line 48 "src/lexer.re"
	{ return t; }
#line 64 "src/lexer.c"
yy5:
	yych = *++YYCURSOR;
	switch (yych) {
		case '\t':
		case '\v':
		case '\f':
		case '\r':
		case ' ': goto yy5;
		default: goto yy6;
	}
yy6:
#line 41 "src/lexer.re"
	{ goto loop; }
#line 78 "src/lexer.c"
yy7:
	++YYCURSOR;
#line 42 "src/lexer.re"
	{ l->line++; l->linestart = YYCURSOR; goto loop; }
#line 83 "src/lexer.c"
yy8:
	yych = *++YYCURSOR;
	switch (yych) {
		case '/': goto yy10;
		default: goto yy4;
	}
yy9:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'n': goto yy12;
		default: goto yy4;
	}
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x00:
		case '\n': goto yy11;
		default: goto yy10;
	}
yy11:
#line 43 "src/lexer.re"
	{ goto loop; }
#line 106 "src/lexer.c"
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy14;
		default: goto yy13;
	}
yy13:
	YYCURSOR = YYMARKER;
	goto yy4;
yy14:
	++YYCURSOR;
#line 47 "src/lexer.re"
	{ return t; }
#line 120 "src/lexer.c"
}
#line 49 "src/lexer.re"

#undef YYCURSOR
#undef YYMARKER
#undef YYLIMIT

        Todo("Unreachable\n");
        return t;
}
